src/objects/RelationshipGroup__c.object
<CustomObject>
    <fields>
        <fullName>HierarchyLevel__c</fullName>
        <label>HierarchyLevel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RelationshipGroupMasterParent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelationshipGroupMasterParent</label>
        <referenceTo>RelationshipGroup__c</referenceTo>
        <relationshipLabel>RelationshipGroups (RelationshipGroupMasterParent)</relationshipLabel>
        <relationshipName>RelationshipGroups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelationshipGroupParent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelationshipGroupParent</label>
        <referenceTo>RelationshipGroup__c</referenceTo>
        <relationshipLabel>RelationshipGroups</relationshipLabel>
        <relationshipName>RelationshipGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RelationshipGroup</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RelationshipGroup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RelationshipGroups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>